--- a/src/index.html
+++ b/src/index.html
@@ -3,17 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="styles/index.css" >
   <title>News Aggregator</title>
+  
 </head>
 <body>
-  <h1 class="site-title">News Aggregator</h1>
-  
-  <div class="search-container">
-    <input type="text" name="search" id="search" placeholder="Type and press enter to search..." />
+    <div class="site-title">NEWS AGGREGATOR</div>
+    <div class="search-bar">
+    <input type="text" name="search" id="search" placeholder="Type and press enter to search..."/>
   </div>
-
-  <ul id="news-articles">
-
-  </ul>
+ 
+          <ul id="news-articles"></ul>
+                
+    <script src="scripts/index.js"></script>
 </body>
 </html>
