--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,16 @@
     <div class="site-title">NEWS AGGREGATOR</div>
     <div class="search-bar">
     <input type="text" name="search" id="search" placeholder="Type and press enter to search..."/>
+    </div>
+
+    <ul id="news-articles">
+    <h4 class="not-found" id="msg"></h4>
+    <div id="main-news-container">
+      
+        <div class="load"></div>
+      </ul>
+    </div>
   </div>
- 
-          <ul id="news-articles"></ul>
-                
-    <script src="scripts/index.js"></script>
+  <script src="scripts/index.js"></script>
 </body>
 </html>
