--- a/src/index.html
+++ b/src/index.html
@@ -10,14 +10,15 @@
 <body>
     <div class="site-title">NEWS AGGREGATOR</div>
     <div class="search-bar">
-    <input type="text" name="search" id="search" placeholder="Type and press enter to search..."/>
+    <input type="text" name="input" id="search" placeholder="Type and press enter to search"/>
     </div>
 
     <ul id="news-articles">
+    
     <h4 class="not-found" id="msg"></h4>
     <div id="main-news-container">
       
-        <div class="load"></div>
+    <div class="load"></div>
       </ul>
     </div>
   </div>
