--- a/src/index.html
+++ b/src/index.html
@@ -13,13 +13,7 @@
     <input type="text" name="input" id="search" placeholder="Type and press enter to search"/>
     </div>
 
-    <ul id="news-articles">
-    
-    <h4 class="not-found" id="msg"></h4>
-    <div id="main-news-container">
-      
-    <div class="load"></div>
-      </ul>
+    <ul id="news-articles"></ul>
     </div>
   </div>
   <script src="scripts/index.js"></script>
