--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -35,4 +35,31 @@
   <script src="scripts/index.js"></script>
 </body>
 
+</html> -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="styles/index.css" >
+  <title>News Aggregator</title>
+  
+</head>
+<body>
+    <div class="site-title">NEWS AGGREGATOR</div>
+    <div class="search-bar">
+    <input type="text" name="input" id="search" placeholder="Type and press enter to search"/>
+    </div>
+    <h4 class="not-found" id="msg"></h4>
+    <div id="main-news-container">
+      <ul id="news-articles">
+        <div class="loader"></div>
+      </ul>
+
+    <!-- <ul id="news-articles"></ul> -->
+    </div>
+  </div>
+  <script src="scripts/index.js"></script>
+</body>
 </html>
+
