--- a/src/index.html
+++ b/src/index.html
@@ -48,15 +48,13 @@
 <body>
     <div class="site-title">NEWS AGGREGATOR</div>
     <div class="search-bar">
-    <input type="text" name="input" id="search" placeholder="Type and press enter to search"/>
+    <input type="text" name="input" id="search" placeholder="Type and press enter to search..."/>
     </div>
     <h4 class="not-found" id="msg"></h4>
     <div id="main-news-container">
       <ul id="news-articles">
         <div class="loader"></div>
       </ul>
-
-    <!-- <ul id="news-articles"></ul> -->
     </div>
   </div>
   <script src="scripts/index.js"></script>
