--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles/index.css" >
-  <title>News Aggregator</title>
+  <title>News2You</title>
   
 </head>
 <body>
@@ -13,7 +13,7 @@
     <input type="text" name="input" id="search" placeholder="Type and press enter to search..."/>
     </div>
     <h4 class="not-found" id="msg"></h4>
-    <div id="main-news-container">
+    <div id="container">
       <ul id="news-articles">
         <div class="loader"></div>
       </ul>
